feat: create client operations
