# src/model/clientModel.js
@@ -2,9 +2,9 @@ import pgClient from "../config/pgClient.js"
 import DatabaseError from "../exception/DatabaseError.js"
 import bcrypt from 'bcrypt'
 
-const driverModel = {
+const clientModel = {
   checkEmail: async email => {
-    const result = await pgClient.query(`SELECT * FROM driver WHERE email = '${email}'`)
+    const result = await pgClient.query(`SELECT * FROM client WHERE email = '${email}'`)
     if(result.rowCount > 0) {
       throw new DatabaseError('Email already exist', 'conflict')
     }
@@ -12,16 +12,18 @@ const driverModel = {
 
   insert: async data => {
     const hashPassword = await bcrypt.hash(data.password, 12)
-    await pgClient.query(`INSERT INTO driver (username, email, password, route) VALUES ('${data.username}', '${data.email}', '${hashPassword}', '${data.route}')`)
+    await pgClient.query(`INSERT INTO client (username, email, password) VALUES ('${data.username}', '${data.email}', '${hashPassword}')`)
   },
 
-  getDriver: async email => {
-    const result = await pgClient.query(`SELECT * FROM driver WHERE email = '${email}'`)
+
+  getClient: async email => {
+    const result = await pgClient.query(`SELECT * FROM client WHERE email = '${email}'`)
     if(result.rowCount === 0) {
       throw new DatabaseError('Email not found', 'not_found')
     }
     return result.rows[0]
   }
+
 }
 
-export default driverModel
+export default clientModel
